# processor

./: .gitignore  CMakeLists.txt  README.MD  imageproc_run
include/: bmp_handler.h  image.h
src/: bmp_handler.cpp  bmp_io.cpp  bmp_io.h  command_parser.cpp  command_parser.h  crop_filter.cpp  crop_filter.h  filter.h  grey_filter.cpp  grey_filter.h  image.cpp  image.h  image_processor.cpp  image_processor.h  main.cpp  mosaic_filter.cpp  mosaic_filter.h  negative_filter.cpp  negative_filter.h
tests/: CMakeLists.txt  bmp_io_test.cpp  image_test.cpp
